--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "connected-react-router": "^6.9.1",
+    "history": "^4.10.1",
     "react": "^17.0.2",
+    "react-currency-input-field": "^3.4.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
@@ -17,6 +19,8 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "redux-starter-kit": "^2.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
