--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +11,7 @@
     "axios": "^0.21.1",
     "connected-react-router": "^6.9.1",
     "history": "^4.10.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-currency-input-field": "^3.4.2",
     "react-dom": "^17.0.2",
@@ -20,7 +22,6 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
-    "redux-starter-kit": "^2.0.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
