add header add hoc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,8 @@
       "jsx-a11y/control-has-associated-label": "off",
       "jsx-a11y/anchor-has-content": "off",
       "react/jsx-one-expression-per-line": "off",
-      "jsx-a11y/anchor-is-valid": "off"
+      "jsx-a11y/anchor-is-valid": "off",
+      "import/prefer-default-export": "off",
     },
     "ecmaFeatures": {
       "legacyDecorators": "true"
