--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,12 @@
 {
-    "useTabs": false,
-    "printWidth": 100,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "semi": false,
-    "arrowParens": "always",
-    "editor.formatOnSave": true
-  }
-  
+  "useTabs": false,
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "semi": false,
+  "arrowParens": "always",
+  "editor.formatOnSave": true,
+  "import/prefer-default-export": "off"
+}
