--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connected-react-router": "^6.9.1",
     "history": "^4.10.1",
     "lodash": "^4.17.21",
+    "postcss-scss": "^4.0.0",
     "react": "^17.0.2",
     "react-currency-input-field": "^3.4.2",
     "react-dom": "^17.0.2",
